css changes to fix home page on mobile

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 0;
     }
 
 .active {
@@ -44,7 +45,6 @@ body.home_page {
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     background-blend-mode: darken;
